Another vertical alignment bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,8 @@ label #sign-two {
     display: -o-flex;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -191,7 +192,7 @@ label #sign-two {
 }
 
 .typewriter {
-
+    margin: auto 0;
 }
 
 .typewriter h2 {
